Some Code Fixes

--- a/src/com/isaiahvonrundsedt/testflight/forms/Core.form
+++ b/src/com/isaiahvonrundsedt/testflight/forms/Core.form
@@ -5,7 +5,9 @@
       <xy x="20" y="20" width="557" height="400"/>
     </constraints>
     <properties/>
-    <border type="none"/>
+    <border type="empty">
+      <size top="16" left="16" bottom="16" right="16"/>
+    </border>
     <children>
       <grid id="e407c" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
         <constraints border-constraint="North"/>
@@ -15,7 +17,7 @@
           <component id="a06dc" class="javax.swing.JLabel">
             <constraints/>
             <properties>
-              <font name="Helvetica Neue" size="14" style="0"/>
+              <font name="Slate For OnePlus" size="14" style="0"/>
               <text value="Enter Request:"/>
             </properties>
           </component>
@@ -23,13 +25,13 @@
             <constraints/>
             <properties>
               <columns value="10"/>
-              <font name="Helvetica Neue" size="14" style="0"/>
+              <font name="Slate For OnePlus" size="14" style="0"/>
             </properties>
           </component>
           <component id="285f8" class="javax.swing.JButton" binding="requestButton">
             <constraints/>
             <properties>
-              <font name="Helvetica Neue" size="14" style="0"/>
+              <font name="Slate For OnePlus" size="14" style="0"/>
               <text value="OK"/>
             </properties>
           </component>
@@ -38,13 +40,13 @@
       <component id="e49b5" class="javax.swing.JTable" binding="requestsTable" custom-create="true">
         <constraints border-constraint="Center"/>
         <properties>
-          <font name="Helvetica Neue" size="14" style="0"/>
+          <font name="Slate For OnePlus" size="14" style="0"/>
         </properties>
       </component>
       <component id="dbfd5" class="javax.swing.JTable" binding="statusTable" custom-create="true">
         <constraints border-constraint="South"/>
         <properties>
-          <font name="Helvetica Neue" size="14" style="0"/>
+          <font name="Slate For OnePlus" size="14" style="0"/>
           <showHorizontalLines value="false"/>
           <showVerticalLines value="false"/>
         </properties>
